[package]
name = "undead-overhaul"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy-inspector-egui = "0.31.0"
bevy_aseprite_ultra = "0.6.1"
bevy_rapier2d = "0.30.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 0
incremental = true


# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
